--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+@media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
